# V-ECS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  V-ECS.sln  environment.md
V-ECS/: V-ECS.vcxproj  imgui.ini  main.cpp
V-ECS/ecs/: Archetype.cpp  Archetype.h  ArchetypeBuilder.h  EntityQuery.cpp  EntityQuery.h  System.h  World.cpp  World.h
V-ECS/engine/: Buffer.cpp  Buffer.h  Debugger.cpp  Device.cpp  Device.h  Engine.cpp  Engine.h  WindowResizeEvent.h
V-ECS/events/: AddVerticesEvent.h  EventManager.cpp  RemoveVerticesEvent.h
V-ECS/gui/: GUIComponent.h  GUIRenderer.cpp  GUIRenderer.h
V-ECS/input/: ControlledComponent.h  ControllerSystem.cpp  ControllerSystem.h
V-ECS/movement/: MovementSystem.cpp  PositionComponent.h  VelocityComponent.h
V-ECS/rendering/: CameraComponent.h  CameraSystem.cpp  CameraSystem.h  DepthTexture.cpp  DepthTexture.h  MeshComponent.h  MeshRendererSystem.cpp  MeshRendererSystem.h  PostRenderSystem.cpp  PostRenderSystem.h  PreRenderSystem.cpp  PreRenderSystem.h  PushConstantComponent.h  RenderStateComponent.h  Renderer.cpp  Renderer.h  SubRenderer.cpp  SubRenderer.h  Texture.cpp  Texture.h  Vertex.h
V-ECS/resources/: manifest.lua
V-ECS/resources/blocks/: stone.lua
V-ECS/resources/shaders/: shader-vert.spv
V-ECS/resources/terrain/: base.lua  caverns.lua
V-ECS/resources/terrain/biomes/: plain.lua
V-ECS/shaders/: shader-vert.spv  shader.frag  shader.vert
V-ECS/ui/: Display.h
V-ECS/util/: LuaUtils.h  VulkanUtils.h
V-ECS/voxel/: BlockComponent.h  ChunkComponent.cpp  ChunkComponent.h  ChunkSystem.cpp  ChunkSystem.h  PostRenderSystem.cpp  PostRenderSystem.h  VoxelRenderingSystem.cpp  VoxelRenderingSystem.h  VoxelWorld.cpp  VoxelWorld.h
V-ECS/voxel/components/: BlockComponent.h  ChunkBuilder.h  ChunkComponent.h
V-ECS/voxel/data/: BlockLoader.cpp  BlockLoader.h  ChunkBuilder.cpp  ChunkBuilder.h  ChunkComponent.h  ChunkSystem.cpp  ChunkSystem.h
V-ECS/voxel/rendering/: CameraComponent.h  CameraSystem.cpp  CameraSystem.h  FrustumCull.h  MeshComponent.h  MeshRendererSystem.cpp  MeshRendererSystem.h  PushConstantComponent.h  Vertex.h  VoxelRenderer.cpp  VoxelRenderer.h
V-ECS/voxel/systems/: ChunkSystem.cpp  ChunkSystem.h
default-resources/: manifest.lua
default-resources/blocks/: grass.lua  stone.lua
default-resources/gamejam/: hourglass.lua  stone.lua
default-resources/maps/: test.lua  test.tmx
default-resources/models/: stone.mtl
default-resources/models/gundam/: README.txt  materials.mtl
default-resources/renderers/: example_gundam.lua  imgui.lua  skybox.lua  sprite.lua  starnest.lua  stone.lua  tilemap.lua  voxel.lua
default-resources/shaders/: gundam.frag  gundam.vert  imgui.frag  passthrough.frag  skybox.frag  skybox.vert  sprite.frag  sprite.vert  spriteatlas.frag  spriteatlas.vert  starnest.frag  starnest.vert  stone.frag  stone.vert  voxel.frag  voxel.vert
default-resources/systems/: camera.lua  debug.lua  dialogueeditor.lua  fixedangle.lua  fps.lua  gundams.lua  hotbar.lua  hourglass.lua  incremental.lua  inventory.lua  loading.lua  noclip.lua  stone.lua  terrain.lua  tiletest.lua  title.lua
default-resources/terrain/: base.lua  caverns.lua  caves.lua  spherical caves.lua
default-resources/terrain/biomes/: plain.lua
default-resources/textures/: hourglass.aseprite
default-resources/worlds/: dialogue.lua  gamejam.lua  gundam-fixed.lua  gundams.lua  incremental.lua  tiletest.lua  title.lua  voxelDefault.lua
kronos/: field.aseprite  fieldv2.aseprite
src/: CMakeLists.txt  icon.aseprite  icon.rc  main.cpp
src/ecs/: Archetype.cpp  Archetype.h  CMakeLists.txt  EntityQuery.cpp  EntityQuery.h  System.h  World.cpp  World.h  WorldLoadStatus.h
src/engine/: Buffer.cpp  Buffer.h  CMakeLists.txt  Debugger.cpp  Debugger.h  Device.cpp  Device.h  Engine.cpp  Engine.h  GLFWEvents.h  Manifest.cpp  Manifest.h
src/events/: CMakeLists.txt  EventManager.cpp  EventManager.h  GLFWEvents.h  LuaEvents.cpp  LuaEvents.h
src/gui/: CMakeLists.txt  GUIRenderer.cpp  GUIRenderer.h  imgui_impl_glfw.cpp
src/input/: CMakeLists.txt  ControlledComponent.h  ControllerSystem.cpp  InputEvents.h
src/jobs/: CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.h  JobManager.cpp  JobManager.h  JobQueue.cpp  JobQueue.h  ThreadResources.cpp  ThreadResources.h  Worker.cpp  Worker.h
src/lib/: FrustumCull.h
src/lib/octree/: octree.vcproj
src/lua/: CMakeLists.txt  ECSBindings.cpp  ECSBindings.h  GLFWBindings.cpp  GLFWBindings.h  JobBindings.cpp  JobBindings.h  LuaVal.cpp  LuaVal.h  MathBindings.cpp  MathBindings.h  NoiseBindings.cpp  NoiseBindings.h  RenderingBindings.cpp  RenderingBindings.h  UtilityBindings.cpp  UtilityBindings.h  imguiBindings.cpp  imguiBindings.h
src/movement/: CMakeLists.txt  MovementSystem.cpp  MovementSystem.h  VelocityComponent.h
src/rendering/: CMakeLists.txt  CameraComponent.h  DepthTexture.cpp  DepthTexture.h  LuaRenderer.cpp  LuaRenderer.h  Model.cpp  Model.cpp~RFa0ee45d.TMP  Model.h  Renderer.cpp  Renderer.h  SecondaryCommandBuffer.cpp  SecondaryCommandBuffer.h  SubRenderer.cpp  SubRenderer.h  Texture.cpp  Texture.h  VertexLayout.cpp  VertexLayout.h
src/resources/blocks/: grass.lua
src/resources/terrain/: caves.lua
src/resources/terrain/biomes/: plain.lua
src/util/: CMakeLists.txt  LuaUtils.h  VulkanUtils.h
src/voxel/: CMakeLists.txt  VoxelWorld.cpp
src/voxel/data/: BlockComponent.h  BlockLoader.cpp  CMakeLists.txt  ChunkBuilder.cpp  ChunkBuilder.h  ChunkComponent.h
src/voxel/rendering/: CMakeLists.txt  CameraComponent.h  CameraSystem.cpp  CameraSystem.h  MeshComponent.h  MeshRendererSystem.h  VoxelRenderer.cpp  VoxelRenderer.h
